<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_20"
    tools:context=".ui.option.DialogOptionFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnChangeTopTitle"
            android:text="@string/change_top_title"
            style="@style/style_button_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/btnChangeBottomTitle"
            android:text="@string/change_bottom_title"
            style="@style/style_button_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
        <Button
            android:id="@+id/btnWallPaper"
            android:text="@string/change_wall_papper"
            style="@style/style_button_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/btnChangeDate"
            android:text="@string/change_date"
            style="@style/style_button_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>