<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.quote.QuoteFragment">

    <TextView
        android:id="@+id/textViewDateCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_text_view_date"
        android:fontFamily="@font/iciel_bambola"
        android:text="@string/date_current"
        android:textSize="@dimen/text_size_date_fragment"
        app:layout_constraintBottom_toTopOf="@id/textViewQuote"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/size_10_dp"
         />

        <TextView
            android:id="@+id/textViewQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_text_view_home"
            android:fontFamily="@font/font_love_2"
            android:gravity="center"
            android:text="@string/content_quote"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRandomQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn_date"
        android:fontFamily="@font/iciel_finch_bold"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:paddingBottom="@dimen/size_7"
        android:text="@string/random"
        android:textAllCaps="false"
        android:textColor="@color/mau_trang"
        android:textSize="@dimen/text_size_30"
        app:layout_constraintLeft_toLeftOf="@id/textViewQuote"
        app:layout_constraintRight_toRightOf="@id/textViewQuote"
        app:layout_constraintTop_toBottomOf="@id/textViewQuote" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_30"
        android:background="@drawable/custom_btn_date"
        android:fontFamily="@font/iciel_finch_bold"
        android:gravity="center"
        android:paddingBottom="@dimen/size_7"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/mau_trang"
        android:textSize="@dimen/text_size_30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/btnRandomQuote"
        app:layout_constraintRight_toRightOf="@id/btnRandomQuote" />
    <ImageButton
        android:id="@+id/btnBack"
        android:padding="@dimen/padding_btn_back"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/no_color"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_arrow_back_24px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>