<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_5">
            <TextView
                android:id="@+id/nameUser1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_person_1"
                android:layout_margin="@dimen/size_2"
                android:background="@drawable/custom_btn_date"
                android:backgroundTint="@color/color_in_notification"
                />
            <TextView
                android:id="@+id/tvDateOfBirth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_date_of_birth"
                android:layout_margin="@dimen/size_2"
                android:background="@drawable/custom_btn_date"
                android:backgroundTint="@color/color_in_notification"
                 />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_5">
            <ImageView
                android:id="@+id/ivHeart"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_24px"
                />
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15_day"
                android:layout_margin="@dimen/size_2"
                android:background="@drawable/custom_btn_date"
                android:backgroundTint="@color/color_in_notification"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/margin_5"
            >
            <TextView
                android:id="@+id/nameUser2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_person_2"
                android:layout_margin="@dimen/size_2"
                android:background="@drawable/custom_btn_date"
                android:backgroundTint="@color/color_in_notification"
                />
            <TextView
                android:id="@+id/tvDateOfBirth2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_date_of_birth"
                android:layout_margin="@dimen/size_2"
                android:background="@drawable/custom_btn_date"
                android:backgroundTint="@color/color_in_notification"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>