<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.profile.ProfileDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="@dimen/layout_profile"
            android:layout_height="@dimen/layout_profile"
            android:padding="10dp"
            android:src="@drawable/avatar_image_view"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/btnChangeAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_profile_dialog"
            android:text="@string/change_avatar"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toBottomOf="@id/imageViewAvatar"
            app:layout_constraintLeft_toRightOf="@id/imageViewAvatar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageViewAvatar" />
        <EditText
            android:background="@drawable/custom_text_view_profile"
            android:fontFamily="@font/font_love_2"
            android:textColor="@color/mau_trang"
            android:id="@+id/textViewName"
            android:text="@string/name_user"
            android:padding="@dimen/padding_tv_profile"
            app:layout_constraintLeft_toLeftOf="@id/imageViewAvatar"
            app:layout_constraintTop_toBottomOf="@id/imageViewAvatar"
            app:layout_constraintBottom_toTopOf="@id/textViewDate"
            app:layout_constraintRight_toRightOf="@id/imageViewAvatar"
            android:textSize="@dimen/text_size_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:background="@drawable/custom_text_view_profile"
            android:fontFamily="@font/font_love_2"
            android:textColor="@color/mau_trang"
            android:id="@+id/textViewDate"
            android:text="@string/date"
            android:textSize="@dimen/text_size_20"
            android:padding="@dimen/padding_tv_profile"
            android:layout_marginTop="@dimen/margin_5"
            app:layout_constraintTop_toBottomOf="@id/textViewName"
            app:layout_constraintLeft_toLeftOf="@id/textViewName"
            app:layout_constraintRight_toRightOf="@id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:background="@drawable/custom_btn_profile_dialog"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_13"
            android:id="@+id/btnChangeName"
            android:text="@string/change_name"
            app:layout_constraintRight_toRightOf="@id/btnChangeAvatar"
            app:layout_constraintLeft_toLeftOf="@id/btnChangeAvatar"
            app:layout_constraintBottom_toBottomOf="@id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:background="@drawable/custom_btn_profile_dialog"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_13"
            android:id="@+id/btnChangeDate"
            android:text="@string/change_date"
            app:layout_constraintLeft_toLeftOf="@id/btnChangeName"
            app:layout_constraintRight_toRightOf="@id/btnChangeName"
            app:layout_constraintBottom_toBottomOf="@id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <RadioGroup
            android:background="@drawable/custom_btn_profile_dialog"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_13"
            android:id="@+id/btnChangGender"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDate"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_male_black"
                android:buttonTint="#EF5350"
                />
            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_female_black"
                android:buttonTint="#EF5350"
                />
            <RadioButton
                android:id="@+id/radio_gay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_gay_black"
                android:buttonTint="#EF5350"
                />
            <RadioButton
                android:id="@+id/radio_les"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_les_black"
                android:buttonTint="#EF5350"
                />
        </RadioGroup>
        <Button
            android:background="@drawable/custom_btn_profile_dialog"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_13"
            android:id="@+id/btnSave"
            android:text="@string/save_profile"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnChangGender"
            app:layout_constraintLeft_toRightOf="@id/btnCancel"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:background="@drawable/custom_btn_profile_dialog"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_13"
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/btnSave"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>